--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Stylesheets -->
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-<link rel="icon" href="images/fav.png" type="image/x-icon">
+<link rel="icon" href="images/android-icon-72x72.png" type="image/x-icon">
     <a href="https://icons8.com/icon/66842/human-research-program"></a>
 
 
@@ -32,7 +32,7 @@
             <div class="outer-container clearfix">
                 <div class="top-left clearfix">
                     <div class="logo-outer">
-                        <figure class="logo-box"><a href="index-2.html"><img src="images/ts.png"s alt=""></a></figure>
+                        <figure class="logo-box"><a href="#"><img src="images/ts-Logo.png"s alt=""></a></figure>
                     </div>
                   
                     <div class="menu-area">
@@ -76,7 +76,7 @@
         <!--Sticky Header-->
         <div class="sticky-header">
             <div class="container clearfix">
-                <figure class="logo-box"><a href="index-2.html"><img src="images/ts.png" alt=""></a></figure>
+                <figure class="logo-box"><a href="#"><img src="images/apple-icon.png" alt=""></a></figure>
                 <div class="menu-area">
                     <nav class="main-menu navbar-expand-lg">
                         <div class="navbar-header">
